Added platform-related logic (entities, domain and HTTP services, DTO etc

--- a/src/HwReservation.Domain/HwReservation.Domain.csproj
+++ b/src/HwReservation.Domain/HwReservation.Domain.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Shared\HwReservation.Shared.csproj" />
   </ItemGroup>
 
 </Project>
