--- a/src/HwReservation.Data/HwReservation.Data.csproj
+++ b/src/HwReservation.Data/HwReservation.Data.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HwReservation.Domain\HwReservation.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
