--- a/src/Server/HwReservation.Server.csproj
+++ b/src/Server/HwReservation.Server.csproj
@@ -8,15 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="7.0.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Client\HwReservation.Client.csproj" />
+    <ProjectReference Include="..\HwReservation.Domain\HwReservation.Domain.csproj" />
     <ProjectReference Include="..\Shared\HwReservation.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 
